# ring_buffer_mcu

./: .clang-format  CMakeLists.txt  CMakePresets.json  README.md
cmake/: test_config.cmake
include/ring_buffer/: ring_buffer.h
source/: ring_buffer.c
test/: CMakeLists.txt
test/unit_test/: CMakeLists.txt
test/unit_test/suites/: ut_rbuf.cpp  ut_rbuf_get_free_size.cpp  ut_rbuf_get_used_size.cpp  ut_rbuf_init.cpp  ut_rbuf_is_empty.cpp  ut_rbuf_is_full.cpp  ut_rbuf_read_copy_block.cpp  ut_rbuf_read_copy_raw.cpp  ut_rbuf_read_uint8.cpp  ut_rbuf_write_copy.cpp  ut_rbuf_write_string.cpp  ut_rbuf_write_uint8.cpp
